<resources>
    <string name="app_name">SeekABook</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
    <string name="title_activity_results">ResultsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="barcode_scanner">Barcode Scanner</string>
    <string name="book_history">Search History</string>
    <string name="favorites_nav">Favorites</string>
    <string name="home">Home</string>
    <string name="history">History</string>
    <string name="favorites">Favorites</string>
    <string name="barcode">Scan Book</string>
    <string name="title_search">Search By Title</string>
    <string name="title_search_btn"> Search For Book </string>
    <string name="search_hint">Enter a book title</string>
</resources>
