<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/home"/>

        <item
            android:id="@+id/barcode"
            android:icon="@drawable/ic_barcode_icon"
            android:title="@string/barcode_scanner"/>

        <item
            android:id="@+id/title_search"
            android:icon="@drawable/ic_search_black_24dp"
            android:title="@string/title_search"/>

        <item
            android:id="@+id/history_button"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/book_history"/>

        <item
            android:id="@+id/favorite_button"
            android:icon="@drawable/ic_star_black_24dp"
            android:title="@string/favorites_nav"/>


    </group>

</menu>